# PolyDE

./: CMakeLists.txt  FEMsettings.txt  README.md
Physics/: PhysicsModes.txt
Projects/heatFichera01/: BoundaryConditions.txt  FEMsettings.txt  FICH01.UNV  POSTsettings.txt  SCALAR_POINT.vtk  materials.txt  unity.material
Projects/heatLShape01/: FEMsettings.txt  POSTsettings.txt  lshape.dxf  mat.material
Source/: CMakeLists.txt
Source/Acadnet/: CMakeLists.txt  acadini.f90  acadnet.f90  arc.f90  blocks.f90  circ.f90  classes.f90  elmgeb.f90  entity.f90  ftlay.f90  getxyz.f90  header.f90  hline.f90  indxf.f90  laytab.f90  line.f90  lwpolyline.f90  matgeb.f90  mtext.f90  objects.f90  outdxf.f90  param.for  pline.f90  putlin.f90  putnod.f90  rbtxt.f90  readky.f90  sectio.f90  setzwg.f90  snzwg.f90  sortnt.f90  tables.f90  testac.f90  text.f90  unsect.f90  vertex.f90
Source/Femlib/: CMakeLists.txt  LCSRConverter.f90  LCSRRemover.f90  append.f90  basin.f90  basout.f90  bivar.f90  centerofgravity.f90  copyr.f90  cross_product.f90  destroyarrptr.f90  dgshape.f90  dichk.f90  elemnt.f90  extend.f90  feminterface.f90  femtypes.f90  field.f90  flaech.f90  gengeb.f90  get1Dintegpoints.f90  get1Dintpolpoints.f90  get2Dintegpoints.f90  get2Dintpoints.f90  glaett.f90  globalvariables.f90  hunt.f90  initialize.f90  inkrp.f90  invertmat.f90  julianday.f90  kern3.f90  lin.f90  linear_sparse_solve.F90  linfluid.f90  linstokes.f90  lintrans.f90  locate.f90  lout.f90  louttrans.f90  (+40 more)
Source/Femlib3D/: CMakeLists.txt  area3D.f90  bcs2vert.f90  bcstovv.f90  calctensor3D.f90  dgshapesc3D.f90  element_draw_vtk.f90  feminterface3d.f90  field3D.f90  fieldquantity3D.f90  fieldsc3D.f90  findelement3D.f90  get2Dintpolpoints.f90  get3Dintegpoints.f90  getes.f90  getfe.f90  getgl.f90  getse.f90  getvf.f90  globalvariables3d.f90  initialize3D.f90  lam2xyz.f90  meshquality3d.f90  pdecoeff3D.f90  plot_marking.f90  plotdataout.f90  readng.f90  reversemap.f90  setstandardvalues3D.f90  shapefunctionsc3D.f90  shapefunctionv3D.f90  solin.f90  solout.f90  sortnodes.f90  swap23.f90  tetangles.f90  tetmeanratio.f90  tetvolume.f90  unvreadwrite.f90  vol2aux.f90  (+5 more)
Source/Fluidlib/: CMakeLists.txt  assembly_nostep.f90  assemblyrhsstep2.f90  boundary_incomprs.f90  checkconverge.f90  elementmatrix_pstiff.f90  elementmatrix_stokes.f90  elementmatrix_stokesmix.f90  fluidinterface.f90  fluidvariables.f90  getbcval2D_mn.f90  geteleminfo.f90  getmassmat.f90  getrhsstep1_incomprs.f90  getrhsstep2_implicit.f90  getrhsstep2_incomprs.f90  getrhsstep3_incomprs.f90  getrhsstep4_incomprs.f90  inputfluid.f90  lout_fluid.f90  lout_mixed.f90  nusselt.f90  preassemb_mixed.f90  presettings.f90  pstiff.f90  readnetin_mn.f90  setupia_stokes.f90  setupia_temp.f90  solver_comprs.f90  solver_fluid.f90  solver_incomprs.f90  solver_stokes.f90  step1_incomprs.f90  step2_implicit.f90  step2_incomprs.f90  step3_incomprs.f90  step4_incomprs.f90  streamfunction.f90  timestep_incomprs.f90
Source/Post/: CMakeLists.txt  circle.f90  convertcolorstring.f90  currentflow.f90  drtri.f90  energyflow.f90  farbe.f90  farbpalette.f90  fieldquantity.f90  fpotentialp.f90  hlinexy.f90  homtransform.f90  hsb_to_rgb.f90  kreipf.f90  losses.f90  nfarbe.f90  nfarbep.f90  nsurf.f90  numberpoly.f90  post.f90  postmodule.f90  scatterparameters.f90  struc.f90  tripc.f90  triplt.f90  zanfpp.f90
Source/Post3D/: CMakeLists.txt  exportdata3D.f90  exportvtk.f90  exportvtkres.f90  meshquality_vtk.f90  pointvalue3D.f90  polyorder_vtk.f90  post3D.f90  vtk_cellplot.f90  vtk_gridplot.f90  vtk_pointplot.f90
Source/Solver/: CMakeLists.txt  adaptation.f90  assembly.f90  assemblyandsolve.f90  assemblyandsolvetrans.f90  assemblytrans.f90  coloring.f90  csrmmout.f90  elementmatrix.f90  elementmatrixtrans.f90  getbcval2D.f90  hadapt.f90  hpadapt.f90  hpffein.f90  itrhstout.f90  matrhsout.f90  mmio.f  nonlinearsolver.f90  padapt.f90  pardiso_unsym.f90  preassemb.f90  qmrsolver.f90  residual.f90  solve2.f90  solver.f90  transientsolver.f90  umfsolver.f90  zqmrsolve.f90
Source/Solver3D/: CMakeLists.txt  CSR_residual.f90  assembly3D.f90  coloring3D.f90  element_mark3D.f90  elementmatrix3D.f90  elementmatrix_scalar3D.f90  estimate_error3D.f90  get_modres.f90  get_pconfirm.f90  getbcval.f90  getepbc.f90  getkpv.f90  h_adapt3D.f90  hmesh_refine3D.f90  hp_adapt3D.f90  hp_alg_F8R.f90  p_adapt3D.f90  petscNonlinear.F90  pmesh_refine3D.f90  preassemb3D.f90  prepare_adaptation3D.f90  residual3D.f90  residualsc3D.f90  solve_adapt3D.F90  solve_linear3D.f90  solve_nonlinear3D.f90  solver3D.f90  vtk_varmatplot.f90
Source/System/: CMakeLists.txt
Source/System/Linux/: CMakeLists.txt  getfilel.f90  getsettingfile.f90  setprocesspriority.f90
Source/System/Linux/acadnet/: acadini_linux.f90
Source/System/Linux/petsc/: MpiInit.F90  matrhsin.f90  petscassembly.F  petscsolver.F90  petscsolverF90.F  psolver.F
Source/System/PC/: CMakeLists.txt  getfile.f90  getsettingfile.f90  setprocesspriority.f90
Source/Triang/: CMakeLists.txt  ausgab.f90  decroach.f90  decroachn.f90  delaunay_refinment.f90  earclipper.f90  encrtest.f90  genele.f90  genkz.f90  innen.f90  intbridges.f90  lese.f90  minmesh.f90  mplist.f90  param.for  regionlist.f90  schn.f90  sorttr.f90  splitencrelement.f90  tria.f90  triang.f90
Source/Userinterface/: CMakeLists.txt  userbc.f90  usermaterials.f90
Source/Userinterface3D/: CMakeLists.txt  userbc3D.f90  usermaterials3D.f90
